--- a/index.html
+++ b/index.html
@@ -557,65 +557,67 @@
         animate();
       }
 
-      function ponies() {
-        (function (srcs, cfg) {
-          var cbcount = 1;
-          var callback = function () {
-            --cbcount;
-            if (cbcount === 0) {
-              BrowserPonies.setBaseUrl(cfg.baseurl);
-              if (!BrowserPoniesBaseConfig.loaded) {
-                BrowserPonies.loadConfig(BrowserPoniesBaseConfig);
-                BrowserPoniesBaseConfig.loaded = true;
-              }
-              BrowserPonies.loadConfig(cfg);
-              if (!BrowserPonies.running()) BrowserPonies.start();
-            }
-          };
-          if (typeof(BrowserPoniesConfig) === "undefined") window.BrowserPoniesConfig = {};
-          if (typeof(BrowserPoniesBaseConfig) === "undefined") {
-            ++cbcount;
-            BrowserPoniesConfig.onbasecfg = callback;
-          }
-          if (typeof(BrowserPonies) === "undefined") {
-            ++cbcount;
-            BrowserPoniesConfig.oninit = callback;
-          }
-          var node = (document.body || document.documentElement || document.getElementsByTagName('head')[0]);
-          for (var id in srcs) {
-            if (document.getElementById(id)) continue;
-            if (node) {
-              var s = document.createElement('script');
-              s.type = 'text/javascript';
-              s.id = id;
-              s.src = srcs[id];
-              node.appendChild(s);
-            }
-          }
-          callback();
-        })({
-          "browser-ponies-script": "https://panzi.github.io/Browser-Ponies/browserponies.js",
-          "browser-ponies-config": "https://panzi.github.io/Browser-Ponies/basecfg.js"
-        }, {
-          "baseurl": "https://panzi.github.io/Browser-Ponies/",
-          "fadeDuration": 500,
-          "volume": 1,
-          "fps": 25,
-          "speed": 3,
-          "audioEnabled": false,
-          "showFps": false,
-          "showLoadProgress": true,
-          "speakProbability": 0.1,
-          "spawn": {
-            "applejack": 1,
-            "fluttershy": 1,
-            "pinkie pie": 1,
-            "rainbow dash": 1,
-            "rarity": 1,
-            "twilight sparkle": 1
-          }
-        });
+     function ponies() {
+  (function(srcs, cfg) {
+    let cbcount = 1;
+    const callback = () => {
+      cbcount--;
+      if (cbcount === 0) {
+        window.BrowserPonies.setBaseUrl(cfg.baseurl);
+        if (!window.BrowserPoniesBaseConfig.loaded) {
+          window.BrowserPonies.loadConfig(window.BrowserPoniesBaseConfig);
+          window.BrowserPoniesBaseConfig.loaded = true;
+        }
+        window.BrowserPonies.loadConfig(cfg);
+        if (!window.BrowserPonies.running()) window.BrowserPonies.start();
       }
+    };
+
+    if (typeof window.BrowserPoniesConfig === 'undefined') window.BrowserPoniesConfig = {};
+    if (typeof window.BrowserPoniesBaseConfig === 'undefined') {
+      cbcount++;
+      window.BrowserPoniesConfig.onbasecfg = callback;
+    }
+    if (typeof window.BrowserPonies === 'undefined') {
+      cbcount++;
+      window.BrowserPoniesConfig.oninit = callback;
+    }
+
+    const node = document.body || document.documentElement || document.getElementsByTagName('head')[0];
+    for (const id in srcs) {
+      if (document.getElementById(id)) continue;
+      if (node) {
+        const s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.id = id;
+        s.src = srcs[id];
+        node.appendChild(s);
+      }
+    }
+    callback();
+  })({
+    "browser-ponies-script": "https://panzi.github.io/Browser-Ponies/browserponies.js",
+    "browser-ponies-config": "https://panzi.github.io/Browser-Ponies/basecfg.js"
+  }, {
+    baseurl: "https://panzi.github.io/Browser-Ponies/",
+    fadeDuration: 500,
+    volume: 1,
+    fps: 25,
+    speed: 3,
+    audioEnabled: false,
+    showFps: false,
+    showLoadProgress: true,
+    speakProbability: 0.1,
+    spawn: {
+      "applejack": 1,
+      "fluttershy": 1,
+      "pinkie pie": 1,
+      "rainbow dash": 1,
+      "rarity": 1,
+      "twilight sparkle": 1
+    }
+  });
+}
 
       var gifSrc = 'https://media.giphy.com/media/uDgOkInszKwt7B3Ql1/giphy.gif';
       var gifsPerRow = 13;
