--- a/index.html
+++ b/index.html
@@ -8,10 +8,58 @@
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     html, body { height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; overflow: hidden; transition: background-color 0.3s, color 0.3s; }
-    :root { --bg-color: #f4f4f4; --text-color: black; --border-color: #ccc; --bar-bg: #f1f1f1; --bookmark-bg: #e0e0e0; --bookmark-hover: #d0d0d0; --button-bg: #4CAF50; --tab-bg: #f0f0f0; }
-    body.dark { --bg-color: #1e1e1e; --text-color: white; --border-color: #444; --bar-bg: #2a2a2a; --bookmark-bg: #3a3a3a; --bookmark-hover: #4a4a4a; --button-bg: #388E3C; --tab-bg: #333; }
-    #bookmarksBar { background-color: var(--bar-bg); padding: 5px; border-bottom: 1px solid var(--border-color); display: flex; flex-wrap: wrap; align-items: center; position: fixed; top: 0; width: 100%; z-index: 1000; box-sizing: border-box; }
-    .bookmark { padding: 5px 10px; margin: 2px 5px; background-color: var(--bookmark-bg); border: 1px solid var(--border-color); border-radius: 3px; cursor: pointer; font-size: 14px; text-decoration: none; color: var(--text-color); display: flex; align-items: center; }
+    :root {
+      --bg-color: #f4f4f4;
+      --text-color: black;
+      --border-color: #ccc;
+      --bar-bg: #f1f1f1;
+      --bookmark-bg: #e0e0e0;
+      --bookmark-hover: #d0d0d0;
+      --button-bg: #4CAF50;
+      --button-hover: #45a049;
+      --tab-bg: #f0f0f0;
+    }
+    body.dark {
+      --bg-color: #000000;
+      --text-color: #ffffff;
+      --border-color: #555;
+      --bar-bg: #000000;
+      --bookmark-bg: #000000;
+      --bookmark-hover: #333333;
+      --button-bg: #4CAF50;
+      --button-hover: #45a049;
+      --tab-bg: #000000;
+    }
+    html, body, .console, #inputField, #autocomplete {
+      background-color: var(--bg-color);
+      color: var(--text-color);
+    }
+    #bookmarksBar {
+      background-color: var(--bar-bg);
+      padding: 5px;
+      border-bottom: 1px solid var(--border-color);
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      box-sizing: border-box;
+    }
+    .bookmark {
+      padding: 5px 10px;
+      margin: 2px 5px;
+      background-color: var(--bookmark-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 14px;
+      text-decoration: none;
+      color: var(--text-color);
+      display: flex;
+      align-items: center;
+    }
     .bookmark:hover { background-color: var(--bookmark-hover); }
     .bookmark .remove { margin-left: 5px; color: red; font-weight: bold; cursor: pointer; }
     .bookmark .remove:hover { color: darkred; }
@@ -19,19 +67,20 @@
     h1 { margin: 10px 0; text-align: center; font-size: 24px; flex-shrink: 0; color: var(--text-color); }
     .tabs { display: flex; justify-content: center; margin-bottom: 10px; flex-shrink: 0; }
     .tab { padding: 10px 20px; background-color: var(--tab-bg); cursor: pointer; margin: 0 5px; border: 1px solid var(--border-color); color: var(--text-color); }
-    .active-tab { background-color: var(--button-bg); color: white; }
+    .active-tab { background-color: var(--button-bg); color: #ffffff; }
     .console-container { flex: 1; display: flex; overflow: hidden; }
-    .console { flex: 1; border: 1px solid var(--border-color); background-color: var(--bg-color); padding: 10px; font-family: monospace; white-space: pre-wrap; overflow-y: auto; box-sizing: border-box; color: var(--text-color); }
-    .console .log { color: var(--text-color); }
-    .console .error { color: red; }
-    .console .warn { color: #ffcc00; }
-    .console .info { color: blue; }
+    .console { flex: 1; border: 1px solid var(--border-color); padding: 10px; font-family: monospace; white-space: pre-wrap; overflow-y: auto; box-sizing: border-box; }
+    .console .log { color: #ffffff; }
+    .console .error { color: #ff5555; }
+    .console .warn { color: #ffff55; }
+    .console .info { color: #55aaff; }
     .input-container { display: flex; flex-shrink: 0; padding: 10px; box-sizing: border-box; position: relative; }
-    #inputField { flex: 1; padding: 10px; font-size: 16px; margin-right: 10px; box-sizing: border-box; font-family: monospace; background-color: var(--bg-color); color: var(--text-color); border: 1px solid var(--border-color); resize: vertical; min-height: 40px; }
+    #inputField { flex: 1; padding: 10px; font-size: 16px; margin-right: 10px; box-sizing: border-box; font-family: monospace; border: 1px solid var(--border-color); resize: vertical; min-height: 40px; }
     button { padding: 10px; background-color: var(--button-bg); color: white; border: none; cursor: pointer; font-size: 16px; margin: 0 5px; flex-shrink: 0; }
-    .element-link { color: blue; cursor: pointer; text-decoration: underline; margin-left: 5px; }
-    .element-link:hover { color: darkblue; }
-    #autocomplete { position: absolute; bottom: 60px; left: 10px; background-color: var(--bg-color); border: 1px solid var(--border-color); max-height: 150px; overflow-y: auto; display: none; z-index: 100; }
+    button:hover { background-color: var(--button-hover); }
+    .element-link { color: #55aaff; cursor: pointer; text-decoration: underline; margin-left: 5px; }
+    .element-link:hover { color: #77ccff; }
+    #autocomplete { position: absolute; bottom: 60px; left: 10px; border: 1px solid var(--border-color); max-height: 150px; overflow-y: auto; display: none; z-index: 100; }
     .autocomplete-item { padding: 5px; cursor: pointer; color: var(--text-color); }
     .autocomplete-item:hover { background-color: var(--bookmark-hover); }
     #gameCanvas { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); border: 1px solid var(--border-color); display: none; z-index: 2000; }
@@ -202,6 +251,12 @@
       function toggleTheme() {
         document.body.classList.toggle('dark');
         localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+        if (isGameRunning) {
+          const canvas = document.getElementById('gameCanvas');
+          const ctx = canvas.getContext('2d');
+          ctx.fillStyle = document.body.classList.contains('dark') ? '#000000' : '#f4f4f4';
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+        }
       }
 
       function exportLog() {
@@ -294,7 +349,7 @@
         let score = 0;
 
         function draw() {
-          ctx.fillStyle = document.body.classList.contains('dark') ? '#1e1e1e' : '#f4f4f4';
+          ctx.fillStyle = document.body.classList.contains('dark') ? '#000000' : '#f4f4f4';
           ctx.fillRect(0, 0, canvas.width, canvas.height);
           ctx.fillStyle = 'green';
           snake.forEach(segment => ctx.fillRect(segment.x * gridSize, segment.y * gridSize, gridSize - 2, gridSize - 2));
