--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       box-sizing: border-box; 
       color: var(--text-color);
     }
+    .console .log { color: var(--text-color); }
     body.dark .console .log { color: #ffffff; }
     .console .error { color: #ff5555; }
     .console .warn { color: #ffff55; }
